--- a/movies-app-web/src/component/MovieCard/styles.css
+++ b/movies-app-web/src/component/MovieCard/styles.css
@@ -1,41 +1,80 @@
 .movie-item {
-  width: 540px;
-  height: 220px;
-  margin: 8px 0;
+  width: 100vw;
 
   display: flex;
   flex-direction: row;
 
-  background: #f0f;
+  background: #333;
+  border-bottom: 2px solid #805af0;
+}
+
+.movie-image {
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image {
+  width: 100%;
+  margin: 12% 10% 12% 30%;
 }
 
 .movie-info {
-  width: 100%;
+  width: 60%;
+  padding: 12% 4%;
 
   display: flex;
   flex-direction: column;
-  align-items: start;
-
-  background: dodgerblue;
+  justify-content: space-between;
 }
 
 .title {
-  margin: 16px;
+  height: 11%;
 
-  font-weight: 500;
-  border: 1px solid dodgerblue;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 28px;
+  font-weight: bold;
+  color: #805af0;
 }
 
 .genre {
-  margin: 16px;
+  height: 5%;
+  margin-top: 10%;
 
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: 500;
-  border: 1px solid dodgerblue;
+  color: #ccc;
 }
 
 .release-year {
-  margin: 16px;
+  height: 5%;
+  margin-bottom: 10%;
 
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: 500;
-  border: 1px solid dodgerblue;
+  color: #ccc;
+}
+
+button {
+  width: 28%;
+  height: 12%;
+
+  font-size: 20px;
+  font-family: "Roboto Condensed", sans-serif;
+  background: transparent;
+  color: #805af0;
+  border: 2px solid #805af0;
+  border-radius: 50px;
+  cursor: pointer;
+  box-shadow: 0 0 5px;
+  opacity: 0.8;
+}
+
+button:hover {
+  opacity: 1;
 }
